# cplusplus

HelloWord/: HelloWord.pro  mainwindow.cpp  mainwindow.ui
algorithms/: CMakeLists.txt  bubblesort.cpp  bubblesort.h  library.h
assignments/one/s929913_tax-calculator/: CMakeLists.txt  TaxCalculator.cpp  TaxCalculator.h  TaxInformation.cpp  TaxInformation.h  fortunetax.cpp  fortunetax.h  generaltax.cpp  generaltax.h  main.cpp  socialtax.cpp  socialtax.h  toptax.cpp  toptax.h
build-HelloWord-Desktop_Qt_5_10_0_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-essentials-Desktop_Qt_5_10_0_clang_64bit-Debug/: Makefile  essentials
build-s929913-personal-tax-calculator-v2-Desktop_Qt_5_10_0_clang_64bit-Debug/: Makefile  moc_taxcalculator.cpp  ui_taxcalculator.h
build-todos-Desktop_Qt_5_10_0_clang_64bit-Debug/: Makefile
course-work-two/: CMakeLists.txt  main.cpp  toptax.cpp  toptax.h
essentials/: accessors-two.cpp  accessors.cpp  class1.cpp  constructors.cpp  data-members-struct.cpp  datatypes.cpp  datatypes.h  essentials.pro  factorial.cpp  factorial.h  func-operator.cpp  functions.cpp  functions.h  helloworld.cpp  helloworld.h  implicit-explicit.cpp  jump.cpp  loops.cpp  loops.h  main.cpp  variadic.cpp  variadic.h
s929913-personal-tax-calculator-v2/: bsudeduction.cpp  bsudeduction.h  fortunetax.cpp  fortunetax.h  generaltax.cpp  generaltax.h  laboruniondeduction.cpp  laboruniondeduction.h  main.cpp  minimumdeduction.cpp  minimumdeduction.h  s929913-personal-tax-calculator-v2.pro  socialtax.cpp  socialtax.h  sumtaxes.cpp  sumtaxes.h  toptax.h  (+10 more)
(+150 files in other folders)
